<?xml version="1.0"?>
<package>
  <name>davinci_driver</name>
  <version>0.0.0</version>
  <description>The davinci_driver package</description>

  <maintainer email="kdh@es.aau.dk">Karl Damkjær Hansen</maintainer>

  <license>GPLv3</license>

  <author email="kdh@es.aau.dk">Karl Damkjær Hansen</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>controller_manager</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>hardware_interface</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>ros_controllers</run_depend>

  <export>
    <rosdoc config="rosdoc.yaml" />
  </export>

</package>
